--- a/ClientContactViews/MainWindow.xaml
+++ b/ClientContactViews/MainWindow.xaml
@@ -5,8 +5,16 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ClientContactViews"
         mc:Ignorable="d"
-        Title="Client Contacts" Height="350" Width="525">
+        Title="Client Contacts" Height="350" MinWidth="560">
     <Grid>
-        <local:ContactList DataContext="{Binding ContactList}"/>
+        <Grid.RowDefinitions>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1.5*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+         <local:ContactList DataContext="{Binding ContactList}" Grid.Column="0"/>
+        <local:ContactInfoBox DataContext="{Binding ContactInfoBox}" Grid.Column="1" Height="170" VerticalAlignment="Top"/>
     </Grid>
 </Window>
