--- a/ClientContactViews/Contact.xaml
+++ b/ClientContactViews/Contact.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ClientContactViews"
              mc:Ignorable="d" 
-             d:DesignHeight="100" d:DesignWidth="350">
+             d:DesignHeight="100" MinHeight="50" d:DesignWidth="350">
 
     
     <UserControl.Resources>
@@ -15,19 +15,17 @@
             <Setter Property="VerticalAlignment" Value="Center"/>
             <Setter Property="Stretch" Value="UniformToFill"/>
             <Setter Property="Margin" Value="5"/>
-            <Setter Property="Width" Value="50"/>
+            <Setter Property="Width" Value="20"/>
         </Style>
     </UserControl.Resources>
 
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="60" />
-            <ColumnDefinition Width="60" />
         </Grid.ColumnDefinitions>
-
-        <Button  Grid.Column="0" Content="{Binding ContactName}" Command="{Binding Path=DataContext.UpdateContactInfo, ElementName=ListView}" CommandParameter="{Binding id}"/>
-
+        
+        <Button  Grid.Column="0" Background="Transparent" Content="{Binding ContactName}" Command="{Binding Path=DataContext.UpdateContactInfo, ElementName=ListView}" CommandParameter="{Binding id}"/>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
         <Image  Grid.Column="1" Source=".\res\user locked.png" ToolTip="The contact's user account is disabled."
                 Visibility="{Binding IsDisabled ,  
                             Converter={StaticResource BooleanToVisibilityConverter} }"
@@ -37,6 +35,7 @@
                 Visibility="{Binding IsAdmin, 
                             Converter={StaticResource BooleanToVisibilityConverter} }"
                 />
+        </StackPanel>
 
     </Grid>
 </UserControl>
