--- a/ClientContactViews/ContactInfoBox.xaml
+++ b/ClientContactViews/ContactInfoBox.xaml
@@ -3,12 +3,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:ee="http://schemas.microsoft.com/expression/2010/effects"
              xmlns:local="clr-namespace:ClientContactViews"
              mc:Ignorable="d" 
-             d:DesignHeight="300" Background="White" d:DesignWidth="400">
+             d:DesignHeight="400" d:DesignWidth="400">
     
     <UserControl.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+        
         <Style x:Key="textBox" TargetType="{x:Type TextBox}">
             <Setter Property="HorizontalAlignment" Value="Stretch"/>
             <Setter Property="VerticalAlignment" Value="Stretch"/>
@@ -17,19 +19,39 @@
             <Setter Property="Width" Value="Auto"/>
             <Setter Property="Grid.ColumnSpan" Value="5"/>
             <Setter Property="Grid.Column" Value="1"/>
+            <Setter Property="Visibility" Value="{Binding loaded , Converter={StaticResource BooleanToVisibilityConverter} }" />
         </Style>
+        
         <Style x:Key="textBoxLabels" TargetType="{x:Type Label}">
             <Setter Property="HorizontalAlignment" Value="Stretch"/>
             <Setter Property="VerticalAlignment" Value="Stretch"/>
             <Setter Property="Grid.ColumnSpan" Value="2"/>
             <Setter Property="Grid.Column" Value="0"/>
         </Style>
-        <Style TargetType="Image">
+        
+        
+        <Style x:Key="image" TargetType="Image">
             <Setter Property="HorizontalAlignment" Value="Center"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
             <Setter Property="Stretch" Value="Uniform"/>
-            <Setter Property="Margin" Value="3"/>
+            <Setter Property="Width" Value="20"/>
+            <Setter Property="Margin" Value="5"/>
+            <Setter Property="Visibility" Value="{Binding loaded , Converter={StaticResource BooleanToVisibilityConverter} }" />
         </Style>
+        
+        
+        <Style x:Key="loadingTextBox" TargetType="{x:Type local:AnimatedBar}">
+            <Setter Property="Margin" Value="5"/>
+            <Setter Property="Grid.Column" Value="1" />
+            <Setter Property="Visibility" Value="{Binding loading , Converter={StaticResource BooleanToVisibilityConverter} }"/>
+        </Style>
+        
+        <Style x:Key="loadingImage" TargetType="local:AnimatedBar">
+            <Setter Property="Margin" Value="5,5,2,5"/>
+            <Setter Property="Grid.Column" Value="0" />
+            <Setter Property="Visibility" Value="{Binding loading , Converter={StaticResource BooleanToVisibilityConverter} }"/>
+        </Style>
+
     </UserControl.Resources>
     
     <Grid>
@@ -40,28 +62,40 @@
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="40" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="40"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
+        
+        <Image  Grid.Column="0" Grid.Row="1" Style="{StaticResource image}" ToolTip="Organisation" Source=".\res\organisation.png"/>
+        <Image  Grid.Column="0" Grid.Row="2" Style="{StaticResource image}" ToolTip="Contact Name" Source=".\res\user.png"/>
+        <Image  Grid.Column="0" Grid.Row="3" Style="{StaticResource image}" ToolTip="Phone Number" Source=".\res\phone.png"/>
+        <Image  Grid.Column="0" Grid.Row="4" Style="{StaticResource image}" ToolTip="Email Address" Source=".\res\email.png"/>
+        <Image  Grid.Column="0" Grid.Row="5" Style="{StaticResource image}" ToolTip="Additional Notes Or Comments" Source=".\res\comment.png"/>
+        <TextBox Grid.Row="1" Text="{Binding organisation}" Style="{StaticResource textBox}"/>
+        <TextBox Grid.Row="2" Text="{Binding contactName}" Style="{StaticResource textBox}"/>
+        <TextBox Grid.Row="3" Text="{Binding phone}" Style="{StaticResource textBox}"/>
+        <TextBox Grid.Row="4" Text="{Binding email}" Style="{StaticResource textBox}"/>
+        <ScrollViewer Grid.Column="1" Grid.Row="5" Grid.ColumnSpan="5" Grid.RowSpan="2" MinHeight="100">
+            <TextBox  AcceptsReturn="True" TextWrapping="Wrap" SpellCheck.IsEnabled="True"  Style="{StaticResource textBox}"/>
+        </ScrollViewer>
+        
 
-        <local:AnimatedBar Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="6" Visibility="{Binding loading , Converter={StaticResource BooleanToVisibilityConverter} }"/>
-        <Image  Grid.Column="0" Grid.Row="1" ToolTip="Organisation" Source=".\res\organisation.png"/>
-        <Image  Grid.Column="0" Grid.Row="2" ToolTip="Contact Name" Source=".\res\user.png"/>
-        <Image  Grid.Column="0" Grid.Row="3" ToolTip="Phone Number" Source=".\res\phone.png"/>
-        <Image  Grid.Column="0" Grid.Row="4" ToolTip="Email Address" Source=".\res\email.png"/>
-        <Image  Grid.Column="0" Grid.Row="5" ToolTip="Additional Notes Or Comments" Source=".\res\comment.png"/>
-        <TextBox Grid.Row="1" Style="{StaticResource textBox}"/>
-        <TextBox Grid.Row="2" Style="{StaticResource textBox}"/>
-        <TextBox Grid.Row="3" Style="{StaticResource textBox}"/>
-        <TextBox Grid.Row="4" Style="{StaticResource textBox}"/>
-        <TextBox Grid.Row="5" Grid.RowSpan="2" Style="{StaticResource textBox}"/>
+        <local:AnimatedBar Grid.Row="0" Style="{StaticResource loadingTextBox}" Grid.ColumnSpan="4" />
+        <local:AnimatedBar Grid.Row="1" Style="{StaticResource loadingTextBox}" Grid.ColumnSpan="3"/>
+        <local:AnimatedBar Grid.Row="2" Style="{StaticResource loadingTextBox}" Grid.ColumnSpan="4"/>
+        <local:AnimatedBar Grid.Row="3" Style="{StaticResource loadingTextBox}" Grid.ColumnSpan="2"/>
+
+        <local:AnimatedBar Grid.Column="0" Style="{StaticResource loadingImage}" Grid.Row="0" />
+        <local:AnimatedBar Grid.Column="0" Style="{StaticResource loadingImage}" Grid.Row="1" />
+        <local:AnimatedBar Grid.Column="0" Style="{StaticResource loadingImage}" Grid.Row="2" />
+        <local:AnimatedBar Grid.Column="0" Style="{StaticResource loadingImage}" Grid.Row="3" />
 
     </Grid>
     
