--- a/ClientContactViews/MainWindow.xaml
+++ b/ClientContactViews/MainWindow.xaml
@@ -5,16 +5,18 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ClientContactViews"
         mc:Ignorable="d"
-        Title="Client Contacts" Height="350" MinWidth="560">
+        Title="Client Contacts" Height="350" MinWidth="560" MinHeight="400" Background="#FEFEFF">
     <Grid>
         <Grid.RowDefinitions>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1.5*"/>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*" MinWidth="300"/>
+            <ColumnDefinition Width="5"/>
+            <ColumnDefinition Width="*" MinWidth="300"/>
         </Grid.ColumnDefinitions>
 
          <local:ContactList DataContext="{Binding ContactList}" Grid.Column="0"/>
-        <local:ContactInfoBox DataContext="{Binding ContactInfoBox}" Grid.Column="1" Height="170" VerticalAlignment="Top"/>
+        <GridSplitter Grid.Column="1" Width="5" HorizontalAlignment="Stretch" Background="#14073A" />
+        <local:ContactInfoBox DataContext="{Binding ContactInfoBox}" Grid.Column="2" VerticalAlignment="Top"/>
     </Grid>
 </Window>
