--- a/ClientContactViews/ContactList.xaml
+++ b/ClientContactViews/ContactList.xaml
@@ -30,7 +30,8 @@
         </Grid>
 
 
-        <ListView Grid.Row="1"  x:Name="ListView" ItemsSource="{Binding ContactItems}" Background="Transparent">
+        <ListView Grid.Row="1"  x:Name="ListView" Visibility="{Binding loaded ,  
+                            Converter={StaticResource BooleanToVisibilityConverter} }" ItemsSource="{Binding ContactItems}" Background="Transparent">
             
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
@@ -46,10 +47,19 @@
             <ListView.ItemTemplate>
                 <DataTemplate>
                     
-                    <local:Contact Content="{Binding UpdateContactInfo}" />
+                    <local:Contact  />
                     
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
+
+        <local:ListLoading Grid.Row="1" Visibility="{Binding loading ,  
+                            Converter={StaticResource BooleanToVisibilityConverter} }"/>
+        <StackPanel Grid.Row="1" Margin="10" Orientation="Vertical" HorizontalAlignment="Center"
+                    Visibility="{Binding noResults ,  
+                            Converter={StaticResource BooleanToVisibilityConverter} }">
+            <Image  Width="100" Source=".\res\search.png" />
+            <Label Content="No contacts match your search criteria." />
+        </StackPanel>
     </Grid>
 </UserControl>
