--- a/ClientContactViews/Contact.xaml
+++ b/ClientContactViews/Contact.xaml
@@ -9,6 +9,11 @@
 
     
     <UserControl.Resources>
+        <SolidColorBrush x:Key="lighter" Color="#FEFEFF"/>
+        <SolidColorBrush x:Key="light" Color="#897BAF"/>
+        <SolidColorBrush x:Key="medium" Color="#423075"/>
+        <SolidColorBrush x:Key="dark" Color="#14073A"/>
+        <SolidColorBrush x:Key="darker" Color="#000000"/>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
         <Style TargetType="Image">
             <Setter Property="HorizontalAlignment" Value="Center"/>
@@ -17,6 +22,34 @@
             <Setter Property="Margin" Value="5"/>
             <Setter Property="Width" Value="20"/>
         </Style>
+
+        <Style TargetType="Button">
+            
+
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border>
+                            <Border.Style>
+                                <Style TargetType="{x:Type Border}">
+                                    <Setter Property="VerticalAlignment" Value="Stretch"/>
+                                    <Setter Property="Background" Value="Transparent"/>
+                                    <Style.Triggers>
+                                        <Trigger Property="IsMouseOver" Value="True">
+                                            <Setter Property="Background" Value="Transparent"/>
+                                        </Trigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </Border.Style>
+                            <Grid  >
+                                <ContentPresenter VerticalAlignment="Center" HorizontalAlignment="Stretch"/>
+                            </Grid>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+
+        </Style>
     </UserControl.Resources>
 
     <Grid>
@@ -24,7 +57,9 @@
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         
-        <Button  Grid.Column="0" Background="Transparent" Content="{Binding ContactName}" Command="{Binding Path=DataContext.UpdateContactInfo, ElementName=ListView}" CommandParameter="{Binding id}"/>
+        <Button  Grid.Column="0" Background="Transparent" Content="{Binding ContactName}" 
+                 Command="{Binding Path=DataContext.UpdateContactInfo, ElementName=ListView}" 
+                 CommandParameter="{Binding id}"/>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
         <Image  Grid.Column="1" Source=".\res\user locked.png" ToolTip="The contact's user account is disabled."
                 Visibility="{Binding IsDisabled ,  
